--- a/templates/write.tmpl
+++ b/templates/write.tmpl
@@ -26,7 +26,7 @@
   }
 </style>
 
-<form action="/write?story={{ .Story.ID }}&topic={{ .Story.Topic }}" method="POST" enctype="multipart/form-data" id="formdata" >
+<form action="/write" method="POST" enctype="multipart/form-data" id="formdata" >
   <article class="pv4 bg-lightest-blue dark-blue ph3 ph5-ns">
     <h1 class="fw6 f3 f2-ns lh-title mt0 mb0">
   Write your story
@@ -75,8 +75,12 @@
       <label for="keywords" class="f3 b db mb2 leader">Topic
           </label>
       <select name="topic" class="f4 pa2 ">
-  <option class="f3" value="volvo">I Laughed</option>
-  <option value="saab">Wild Animals</option>
+      {{ with .Story.Topic }}
+  <option class="f3" value="{{ . }}">{{ . }}</option>
+  {{ end }}
+      {{ range .Topics }}
+  <option class="f3" value="{{ .Name }}">{{ .Name }}</option>
+  {{ end }}
 </select>
     </div>
   
@@ -113,7 +117,7 @@
 <label for="description" class="f3 b db mb2 leader">Description
             <span class="normal black-60">(optional)</span>
           </label>
-<textarea name="description" value="" cols=60 rows=3 oninput="tlen(this)" onfocus="tlen(this)" type="text"></textarea><span style="margin-left:10px"></span>
+<textarea name="description" value="" class="input-reset ba b--black-20 pa2 mb db w-100" cols=60 rows=3 oninput="tlen(this)" onfocus="tlen(this)" type="text"></textarea><span style="margin-left:10px"></span>
 
 </div>
 </form>
