--- a/templates/navigation.tmpl
+++ b/templates/navigation.tmpl
@@ -8,7 +8,7 @@
 	</div>
 	{{ end }}
 	<div class="dtc v-mid tr pa3 v-mid">
-		<a class="f6 fw4 hover-white no-underline white-70 dib pv2 ph1 v-mid" href="/read">
+		<a class="f6 fw4 hover-white no-underline white-70 dib pv2 ph1 v-mid" href="/read/topic/">
 <i data-feather="book" class="dib h1 w1 v-mid"></i>
 <span class="f6 pr2 v-mid">Read</span>
 </a>
