--- a/templates/profile.tmpl
+++ b/templates/profile.tmpl
@@ -1,19 +1,14 @@
 {{ template "header" . }}
 
-<article class="pv4 bg-lightest-blue  dark-blue ph3 " >
-  <h1 class="fw6 f3 ph5-ns f2-ns lh-title mt0 mb0">
+<article class="pv4 bg-lightest-blue  dark-blue ph3 ph5-ns " >
+  <h1 class="fw6 f3 f2-ns lh-title mt0 mb0">
 Your Profile
   </h1>
-  <h2 class="fw2 f4 ph5-ns lh-copy mt0 mb3">
-   Manage your stories.<span class="f3">&nbsp;</span>
+  <h2 class="fw2 f4 lh-copy mt0 mb3">
+   Manage your stories.
   </h2>
-  <!-- <h2 class="fw2 f4 ph5-ns lh-copy mt0 mb3">
-    Current topic is <span class="f3">“Losing”</span> and closes in 15 days.
-  </h2> -->
-  <!-- <p class="fw1 f5 mt0 mb3">
-    Sign up for beta access or learn more about x.
-  </p> -->
-  <div class="ph5-ns">
+
+  <div class="">
     <a class="f4 f3-m f3-l  leader br-pill bg-dark-blue no-underline washed-green ba b--dark-blue grow pv2 ph3 dib mr3"
       href="/write">
       Write online
