Updated UI, mailgun works

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -46,9 +46,9 @@
 					<h1 class="f2 f1-m f1-l fw2 white-90 mb0 lh-title">stories, incognito </h1>
 
 					<h2 class="fw1 f3 white-80 mt3 mb4"><span id="js-rotating">“I bought a burn phone.”,“It made a tear come to my eye.”,“Where do the peanuts go?”,“I was 18 and I pledged myself to three things.”,“Those fleshy emotional people would be appalled.”</span></h2>
-					<a class="f6 f5-m f4-l no-underline grow dib v-mid bg-blue white ba b--blue ph4 pv3 mb3" href="/read"><strong>Read stories</strong></a>
+					<a class="f6 f5-m f4-l no-underline grow dib v-mid bg-blue white ba b--blue ph4 pv3 mb3" href="/read/topic/"><strong>read a story</strong></a>
 					<span class="dib v-mid ph3 white-70 mb3">or</span>
-					<a class="f6 f5-m f4-l no-underline grow dib v-mid white ba b--white ph4 pv3 mb3" href="/write"><strong>Write stories</strong></a>
+					<a class="f6 f5-m f4-l no-underline grow dib v-mid white ba b--white ph4 pv3 mb3" href="/write"><strong>write a story</strong></a>
 				</div>
 				{{ end}}
 			</div>
