--- a/templates/landing.tmpl
+++ b/templates/landing.tmpl
@@ -3,6 +3,61 @@
 <article data-name="article-full-bleed-background" class="ph5-ns" style="max-width: 67rem;">
   <div class="cf" style="background: url(/static/img/landing.jpg) no-repeat center center fixed; background-size: cover; ">
     <div class="fl pa3 bg-white black-70 measure-narrow f3">
+      <header class="bb b--black-70 pv1 mt4">
+        <h3 class="f2 fw7 ttu tracked lh-title mt0 mb3 avenir">
+        Read a story</h3>
+      </header>
+      <section class="pv2">
+
+        <p class="f5 lh-copy measure-wide">
+
+          <span class="leader f4"><strong>stories, incognito</strong></span> is a minimalist online magazine for sharing true stories anonymously. There is no subscription, no ads, and no internet comments -  you will not be judged.
+        </p>
+
+        <p class="f5 lh-copy measure-wide">
+          All the stories are from real anonymous people. We aim to bring together stories from all across the world from all walks of life to remind us of the beauty and struggle in humanity and the importance of small moments in our lives. Think of this as Reader's Write, or the Metropolitan Diary, or Beautiful
+          Anonymous, except that here we consider <em>all stories</em> from everywhere in the world.
+        </p>
+
+      </section>
+    </div>
+
+    <div class="fl pa3 bg-white black-70 measure-narrow f3">
+      <header class="bb b--black-70 pv1 mt1">
+        <h3 class="f2 fw7 ttu tracked lh-title mt0 mb3 avenir">
+        Write a story</h3>
+      </header>
+      <section class="pt2 pb4">
+
+        <p class="f5 lh-copy measure-wide">
+         <span class="leader f4"><strong>stories, incognito</strong></span> asks readers to write on topics in which they are the only authority.  Topics are intentionally wide-ranging to allow room for creativity and expression.
+</p>
+        <p class="f5 lh-copy measure-wide">
+        Stories Incognito accepts all stories, as long as they are nonfiction. The style of writing is not as important as being genuine and thoughtful. 
+</p>
+        <p class="f4 lh-copy measure-wide">
+
+There is no word limit.
+
+</p>
+        <p class="f5 lh-copy measure-wide">
+You may <a href="/write">submit stories online</a> or you can mail stories to ADDRESS.
+</p>
+        <p class="f4 lh-copy measure-wide">
+         All stories are accepted.
+</p>
+        <p class="f5 lh-copy measure-wide">
+        In order to ensure privacy of the writer, stories will be edited to remove identifying
+        names, places, or occupations. Unless crucial to the story, such instances will be changed to
+        pseudo-names.
+</p>
+
+      </section>
+    </div>
+
+
+    <!--
+    <div class="fl pa3 bg-white black-70 measure-narrow f3">
       <header class="bb b--black-70 pv4">
         <h3 class="f2 fw7 ttu tracked lh-title mt0 mb3 avenir">
         Real stories by anonymous people</h3>
@@ -28,6 +83,8 @@
 
       </section>
     </div>
+-->
+
   </div>
 </article>
 
