--- a/templates/topics.tmpl
+++ b/templates/topics.tmpl
@@ -37,9 +37,9 @@
 
 <!--
 
-<section class="pa2 pv1 ph5-ns mb5">
+<section class="pa2 pv1 ph5-ns mb5" >
   <article class="ph2">
-    <div class="overflow-auto measure-wide">
+    <div class="overflow-auto measure-wide" >
       <table class="f6 w-100 mw8 center" cellspacing="0">
         <thead>
           <tr>
@@ -78,11 +78,11 @@
 -->
 
 
-
-<section class="pa2 pv2 ph5-ns center">
+<div style="max-width: 67rem;">
+<section class="pa2 pv2 ph5-ns center" >
   {{range .Topics}}
   <article class="bt bb b--black-10">
-    <a class="db pv4 ph3 ph0-l no-underline black dim" href="#0">
+    <a class="db pv4 ph3 ph0-l no-underline black dim" href="/read/topic/{{ .Name | slugify }}">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
           <img src="/static/img/{{ .Name }}.jpg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
@@ -90,9 +90,7 @@
         <div class="w-100 w-60-ns pl3-ns">
           <h1 class="f2 fw1 mt0 lh-title"><strong>{{.Name}}</strong></h1>
           <p class="f6 f5-l lh-copy"><em>
-            The tech giant says it is ready to begin planning a quantum
-            computer, a powerful cpu machine that relies on subatomic particles instead
-            of transistors.
+            {{ .Description }}
           </em></p>
           <p class="f6 lh-copy mv0">{{.Month}}</p>
         </div>
@@ -100,6 +98,8 @@
     </a>
   </article>
   {{ end }}
-
 </section>
+</div>
+
+
 {{ template "footer" . }}
