--- a/templates/topics.tmpl
+++ b/templates/topics.tmpl
@@ -5,9 +5,10 @@
    <h1 class="fw6 f3 f2-ns lh-title mt0 mb0">
   Topics
   </h1>
-  <h2 class="fw2 f4 lh-copy mt0 mb3">
+  <div class="fw2 f5 lh-copy mt0 mb3 pv2 measure-wide">
     See current, past, and future topics.
-  </h2>
+  </div>
+
   <!-- <h2 class="fw2 f4 lh-copy mt0 mb3">
     Current topic is <span class="f3">“Losing”</span> and closes in 15 days.
   </h2> -->
