--- a/templates/write.tmpl
+++ b/templates/write.tmpl
@@ -29,11 +29,11 @@
 <form action="/write" method="POST" enctype="multipart/form-data" id="formdata" >
   <article class="pv4 bg-lightest-blue dark-blue ph3 ph5-ns">
     <h1 class="fw6 f3 f2-ns lh-title mt0 mb0">
-  Write your story
+  Write your story online
   </h1>
-    <h2 class="fw2 f4 lh-copy mt0 mb3">
-    Submit online or mail it to <em>P.O. Box 123, Hillsboro, Oregon</em>
-  </h2>
+  <div class="fw2 f5 lh-copy mt0 mb3 pv2 measure-wide">
+    You can email your story as an attachment to stories@mg.storiesincognito.org, or mail it to <br> <em>P.O. Box 123, Hillsboro, Oregon</em>.
+  </div>
     <!-- <p class="fw1 f5 mt0 mb3">
     Sign up for beta access or learn more about x.
   </p> -->
