--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -19,7 +19,7 @@
 	 <fieldset id="sign_up" class="ba b--transparent ph0 mh0">
 		 <div class="mt3">
 			 <label class="db fw4 lh-copy f6" for="email">Email:</label>
-			 <input class="pa2 input-reset ba bg-transparent w-75 measure" name="email"  id="email">
+			 <input class="pa2 input-reset ba bg-transparent w-75 measure" name="email"  id="email" type="email">
 		 </div>
 	 </fieldset>
 	 <div class="">
