Enter admin using emails

--- a/templates/profile.tmpl
+++ b/templates/profile.tmpl
@@ -45,8 +45,8 @@ Your Profile
           <span class="f6 db black-70">{{ .Date.Format "January 2, 2006" }}</span>
         </div>
         <div>
-          <a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib blue" href="/read?story={{ .ID }}">Read</a>
-          <a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib black" href="/write?story={{ .ID }}">Edit</a>
+          <a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib blue" href="/read/story/{{ .ID }}">Read</a>
+          <a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib black" href="/write/{{ .ID }}">Edit</a>
           <a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib red" href="/delete?story={{ .ID }}">Delete</a>
         </div>
       </li>
