Better write UI

--- a/templates/message.tmpl
+++ b/templates/message.tmpl
@@ -1,6 +1,6 @@
 {{ define "messages" }}
 {{ with .InfoMessage }}
-<div class="pa3 pv2 bg-dark-blue washed-red">
+<div class="pa3 pv2 bg-dark-blue washed-green ">
   <section class=" pv2 ph5-ns">
     <i data-feather="info" class="dib h2 w2 v-mid"></i>
   <span class="lh-title ml3 v-mid">{{ . }}</span>
@@ -9,7 +9,7 @@
 {{ end }}
 
 {{ with .InfoMessageHTML }}
-<div class="pa3 pv2 bg-dark-blue washed-red">
+<div class="pa3 pv2 bg-dark-blue washed-green">
   <section class=" pv2 ph5-ns">
     <i data-feather="info" class="dib h2 w2 v-mid"></i>
   <span class="lh-title ml3 v-mid">{{ . }}</span>
