--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -30,6 +30,25 @@
 <meta name="og:locale" content="en_US">
 <meta name="og:type" content="website">
 
+
+<link rel="apple-touch-icon" sizes="57x57" href="/static/img/meta/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/static/img/meta/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/static/img/meta/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/static/img/meta/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/static/img/meta/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/static/img/meta/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/static/img/meta/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/static/img/meta/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/static/img/meta/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/static/img/meta/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/static/img/meta/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/static/img/meta/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/static/img/meta/favicon-16x16.png">
+<link rel="manifest" href="/static/img/meta/manifest.json">
+<meta name="msapplication-TileColor" content="#cdecff">
+<meta name="msapplication-TileImage" content="/static/img/meta/ms-icon-144x144.png">
+<meta name="theme-color" content="#cdecff">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/static/css/tachyons.min.css">
 	<link rel="stylesheet" href="/static/css/style.css">
