--- a/templates/landing.tmpl
+++ b/templates/landing.tmpl
@@ -1,5 +1,4 @@
 {{ template "header" . }}
-
 <article data-name="article-full-bleed-background" class="ph5-ns" style="max-width: 67rem;">
   <div class="cf" style="background: url(/static/img/landing.jpg) no-repeat center center fixed; background-size: cover; ">
     <div class="fl pa3 bg-white black-70 measure-narrow f3">
@@ -8,54 +7,35 @@
         Read a story</h3>
       </header>
       <section class="pv2">
-
         <p class="f5 lh-copy measure-wide">
-
           <span class="leader f4"><strong>stories, incognito</strong></span> is a minimalist online magazine for sharing true stories anonymously. There is no subscription, no ads, and no internet comments -  you will not be judged.
         </p>
-
         <p class="f5 lh-copy measure-wide">
           All the stories are from real anonymous people. We aim to bring together stories from all across the world from all walks of life to remind us of the beauty and struggle in humanity and the importance of small moments in our lives. Think of this as Reader's Write, or the Metropolitan Diary, or Beautiful
           Anonymous, except that here we consider <em>all stories</em> from everywhere in the world.
         </p>
-
       </section>
     </div>
-
     <div class="fl pa3 bg-white black-70 measure-narrow f3">
       <header class="bb b--black-70 pv1 mt1">
         <h3 class="f2 fw7 ttu tracked lh-title mt0 mb3 avenir">
         Write a story</h3>
       </header>
       <section class="pt2 pb4">
-
         <p class="f5 lh-copy measure-wide">
-         <span class="leader f4"><strong>stories, incognito</strong></span> asks readers to write on topics in which they are the only authority.  Topics are intentionally wide-ranging to allow room for creativity and expression.
-</p>
-        <p class="f5 lh-copy measure-wide">
-        Stories Incognito accepts all stories, as long as they are nonfiction. The style of writing is not as important as being genuine and thoughtful. 
-</p>
+          <span class="leader f4"><strong>stories, incognito</strong></span> asks readers to write about their own everyday experiences as they pertain to any one of a set of topics.  Topics are intentionally wide-ranging to allow room for creativity and expression.
+        </p>
         <p class="f4 lh-copy measure-wide">
-
-There is no word limit.
-
-</p>
+          All stories are accepted, as long as they are nonfiction. The style of writing is not as important as being genuine and thoughtful. There is no word limit.
+        </p>
         <p class="f5 lh-copy measure-wide">
-You may <a href="/write">submit stories online</a> or you can mail stories to ADDRESS.
-</p>
-        <p class="f4 lh-copy measure-wide">
-         All stories are accepted.
-</p>
-        <p class="f5 lh-copy measure-wide">
-        In order to ensure privacy of the writer, stories will be edited to remove identifying
-        names, places, or occupations. Unless crucial to the story, such instances will be changed to
-        pseudo-names.
-</p>
-
+          You may <a href="/write">submit stories online</a>, or email them as an attachment to <a href="mailto:stories@mg.storiesincognito.org?Subject=Story%20Submission" target="_top">stories@mg.storiesincognito.org</a>. Your stories will be edited upon receiving.
+          In order to ensure privacy of the writer, stories will be edited to remove identifying
+          names, places, or occupations. Unless crucial to the story, such instances will be changed to
+          pseudo-names.
+        </p>
       </section>
     </div>
-
-
     <!--
     <div class="fl pa3 bg-white black-70 measure-narrow f3">
       <header class="bb b--black-70 pv4">
@@ -63,30 +43,22 @@ You may <a href="/write">submit stories online</a> or you can mail stories to AD
         Real stories by anonymous people</h3>
       </header>
       <section class="pt2 pb4">
-
         <p class="f5 lh-copy measure-wide">
-
-          Launched in January 2017, <span class="leader f4"><strong>stories, incognito</strong></span> is a minimalist online magazine for sharing true stories anonymously. There is no subscription, no ads, and no internet comments -  you will not be judged. All stories are published, regardless of content, so long that they adhere to the <a href="/privacy" target="_blank">privacy guidelines</a>. 
+          Launched in January 2017, <span class="leader f4"><strong>stories, incognito</strong></span> is a minimalist online magazine for sharing true stories anonymously. There is no subscription, no ads, and no internet comments -  you will not be judged. All stories are published, regardless of content, so long that they adhere to the <a href="/privacy" target="_blank">privacy guidelines</a>.
         </p>
-
         <p class="f4 lh-copy measure">
-        <strong>How it works</strong>: <a href="/topics" target="_blank">choose from available topics</a> and <a href="/write">write a story</a>. Your story will be copyedited and published online at the end of each month. <a href="/read">Read your story</a> and others in a simple, clutter-free way. 
+          <strong>How it works</strong>: <a href="/topics" target="_blank">choose from available topics</a> and <a href="/write">write a story</a>. Your story will be copyedited and published online at the end of each month. <a href="/read">Read your story</a> and others in a simple, clutter-free way.
         </p>
         <p class="f5 lh-copy measure-wide">
           All the stories here are from real anonymous people, for you to read and enjoy for free. We aim to bring together stories from all across the world from all walks of life to remind us of the beauty and struggle in humanity and the importance of small moments in our lives. Think of this as Reader's Write, or the Metropolitan Diary, or Beautiful
           Anonymous, except that here we consider <em>all stories</em> from everywhere in the world.
         </p>
         <p class="f5 lh-copy measure-wide">
-        Read a story, leave a story.
-        </p>        
-
-
+          Read a story, leave a story.
+        </p>
       </section>
     </div>
--->
-
+    -->
   </div>
 </article>
-
-
 {{ template "footer" .}}
