--- a/templates/privacy.tmpl
+++ b/templates/privacy.tmpl
@@ -5,8 +5,8 @@
 
     
 
-<h2>Stories incognito - how?</h2>
-<span class="f4 db lh-copy measure-wide">
+<h2>Keeping stories incognito</h2>
+<span class="f5 db lh-copy measure-wide">
 Submitted stories will have all identifying non-pertinent information changed to pseudo-names during the editing phase. This applies to, but is not limited to, specific names of people, names of places, names of occupations, ages, or other specific characteristics that can easily identify the geographic location or the person. This will ensure that every story remains incognito and protects the anonymity of those submitting stories.
 </span>
 
@@ -21,7 +21,7 @@ When you browse our website, we also automatically receive your computer’s int
 When you provide us with personal information to complete a sign up, we imply that you consent to our collecting it and using it for that specific reason only. If we ask for your personal information for a secondary reason, like marketing, we will either ask you directly for your expressed consent, or provide you with an opportunity to say no. 
 
 
-If after you opt-in, you change your mind, you may withdraw your consent for us to contact you, for the continued collection, use or disclosure of your information, at anytime, by contacting us at storiesincognito.org@gmail.com or mailing us at: Stories, Incognito 123, Portland, OR, 97229, United States. We may disclose your personal information if we are required by law to do so or if you violate our Terms of Service.
+If after you opt-in, you change your mind, you may withdraw your consent for us to contact you, for the continued collection, use or disclosure of your information, at anytime, by contacting us at stories@mg.storiesincognito.org or mailing us at: Stories, Incognito 123, Portland, OR, 97229, United States. We may disclose your personal information if we are required by law to do so or if you violate our Terms of Service.
 
 <h2>Security</h2>
 To protect your personal information, we take reasonable precautions and follow industry best practices to make sure it is not inappropriately lost, misused, accessed, disclosed, altered or destroyed. Although no method of transmission over the Internet or electronic storage is 100% secure, we follow all PCI-DSS requirements and implement additional generally accepted industry standards.
@@ -40,7 +40,7 @@ We reserve the right to modify this privacy policy at any time, so please review
 <h2>Questions and contact information</h2>
 
 
-If you would like to: access, correct, amend or delete any personal information we have about you, register a complaint, or simply want more information contact our Privacy Compliance Officer at storiesincognito.org@gmail.com or by mail at Stories, Incognito
+If you would like to: access, correct, amend or delete any personal information we have about you, register a complaint, or simply want more information contact our Privacy Compliance Officer at stories@mg.storiesincognito.org or by mail at Stories, Incognito
 
 [Re: Privacy Compliance Officer]
 
