--- a/templates/topics.tmpl
+++ b/templates/topics.tmpl
@@ -89,7 +89,7 @@
           <img src="/static/img/{{ .Name }}.jpg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
         </div>
         <div class="w-100 w-60-ns pl3-ns">
-          <h1 class="f2 fw1 mt0 lh-title"><strong>{{.Name}}</strong></h1>
+          <h1 class="f2 fw1 mt0 lh-title mb0"><strong>{{.Name}}</strong></h1>
           <p class="f6 f5-l lh-copy"><em>
             {{ .Description }}
           </em></p>
