--- a/templates/read.tmpl
+++ b/templates/read.tmpl
@@ -24,7 +24,7 @@
 
   {{ with .Story}}
     {{ range $index, $element := .Paragraphs }}
-      {{if eq $index 0 }}<p class="lh-copy measure mt4 mt0-ns">{{else}}<p class="lh-copy measure">{{end}} 
+      {{if eq $index 0 }}<p class="lh-copy measure mt0-ns">{{else}}<p class="lh-copy measure">{{end}} 
       {{ $element }}
       </p>
     {{end}}
