--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,3 +22,10 @@ a {
     -webkit-transition-duration: .2s;
     transition-duration: .2s
 }
+
+@media (--breakpoint-large) {
+	.f59-l {font-size:1.15rem;}
+}
+@media (--breakpoint-medium) {
+	.f51-m { font-size: 1.075rem; }
+}
