--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -50,6 +50,7 @@
 <meta name="theme-color" content="#cdecff">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="/static/css/pretachyon.css">
 	<link rel="stylesheet" href="/static/css/tachyons.min.css">
 	<link rel="stylesheet" href="/static/css/style.css">
 	<script src="/static/js/feather.min.js"></script>
