Update favicon stuff

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -45,9 +45,9 @@
 <link rel="icon" type="image/png" sizes="96x96" href="/static/img/meta/favicon-96x96.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/static/img/meta/favicon-16x16.png">
 <link rel="manifest" href="/static/img/meta/manifest.json">
-<meta name="msapplication-TileColor" content="#cdecff">
+<meta name="msapplication-TileColor" content="#00449e">
 <meta name="msapplication-TileImage" content="/static/img/meta/ms-icon-144x144.png">
-<meta name="theme-color" content="#cdecff">
+<meta name="theme-color" content="#00449e">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/static/css/pretachyon.css">
