--- a/templates/landing.tmpl
+++ b/templates/landing.tmpl
@@ -29,8 +29,7 @@
           All stories are accepted, as long as they are nonfiction. The style of writing is not as important as being genuine and thoughtful. There is no word limit.
         </p>
         <p class="f5 lh-copy measure-wide">
-          You may <a href="/write">submit stories online</a>, or email them as an attachment to <a href="mailto:stories@mg.storiesincognito.org?Subject=Story%20Submission" target="_top">stories@mg.storiesincognito.org</a>. Your stories will be edited upon receiving.
-          In order to ensure privacy of the writer, stories will be edited to remove identifying
+          You may <a href="/write">submit stories online</a>, or email them as an attachment to <a href="mailto:stories@mg.storiesincognito.org?Subject=Story%20Submission" target="_top">stories@mg.storiesincognito.org</a>. In order to ensure privacy of the writer, stories will be edited to remove identifying
           names, places, or occupations. Unless crucial to the story, such instances will be changed to
           pseudo-names.
         </p>
