--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -6,7 +6,7 @@
 <article class="ph2">
  <h1 class="db f1-l f2 mb1">Sign In</h1>
     <span class="f5 db lh-copy measure-wide">
-      Sign in to submit and review your own stories.
+      Log in to manage your own stories. <small><em>Note:</em> we request your email to send a link to log in, but we will never send you any other email unless specified nor do we ever distribution information with any third-party.</small>
     </span>
  </article>
 </section>
