--- a/templates/navigation.tmpl
+++ b/templates/navigation.tmpl
@@ -38,9 +38,9 @@
 								<span class="f6 pr2">About</span>
 							</a> -->
 		{{ if .SignedIn }}
-		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m ml2 pv2 ph3 ba v-mid" href="/signout">Sign Out</a>
+		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m ml2 pv2 ph3 ba v-mid" href="/signout">Log Out</a>
 		{{ else }}
-		<a class="f6 fw4 hover-white no-underline white-70 dn dib ml2 pv2 ph3 ba v-mid" href="/login">Sign In</a>
+		<a class="f6 fw4 hover-white no-underline white-70 dn dib ml2 pv2 ph3 ba v-mid" href="/login">Log In</a>
 		{{ end }}
 	</div>
 </nav>
